src/sfdc/base/main/default/objects/B2C_CRM_Sync_AuthToken_Settings__mdt/B2C_CRM_Sync_AuthToken_Settings__mdt.object-meta.xml
<CustomObject>
    <description>... represents the collection of configuration settings used to create digitally signed JWT tokens that can be redeemed for REST API AuthTokens via B2C Commerce&apos;s Account Manager.</description>
    <label>B2C CRM Sync AuthToken Settings</label>
    <pluralLabel>B2C CRM Sync AuthToken Settings</pluralLabel>
</CustomObject>