src/sfdc/base/main/default/objects/B2C_CRM_Sync_AuthToken_Settings__mdt/fields/Expiration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Expiration_in_Minutes__c</fullName>
    <defaultValue>25</defaultValue>
    <description>... represents the number of minutes to use when calculating an expiration date for a minted JWT / authToken.</description>
    <inlineHelpText>... represents the number of minutes to use when calculating an expiration date for a minted JWT / authToken.</inlineHelpText>
    <label>Expiration in Minutes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>