src/sfdc/base/main/default/objects/B2C_CRM_Sync_AuthToken_Settings__mdt/fields/JWT_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>JWT_Algorithm__c</fullName>
    <description>... represents the collection of algorithms to select from and specify in a JWT header when minting a JWT.</description>
    <inlineHelpText>... represents the collection of algorithms to select from and specify in a JWT header when minting a JWT.</inlineHelpText>
    <label>JWT SFDC Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSA-SHA256</fullName>
                <default>true</default>
                <label>RSA-SHA256</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>