src/sfdc/base/main/default/objects/B2C_CRM_Sync_AuthToken_Settings__mdt/fields/JWT_SFCC_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>JWT_SFCC_Algorithm__c</fullName>
    <description>... represents the algorithm identifier leveraged by the B2C Commerce Account Manager to process a JWT token minted by the Salesforce Platform.  This identifier is embedded in the JWT.</description>
    <inlineHelpText>... represents the algorithm identifier leveraged by the B2C Commerce Account Manager to process a JWT token minted by the Salesforce Platform.  This identifier is embedded in the JWT.</inlineHelpText>
    <label>JWT SFCC Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RS256</fullName>
                <default>true</default>
                <label>RS256</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>