src/sfdc/base/main/default/objects/B2C_CRM_Sync_AuthToken_Settings__mdt/fields/Persist_B2C_AuthTokens__c.field-meta.xml
<CustomField>
    <fullName>Persist_B2C_AuthTokens__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... when checked, retrieved B2C AuthTokens will be persisted and audited for future re-use.</description>
    <inlineHelpText>... when checked, retrieved B2C AuthTokens will be persisted and audited for future re-use.</inlineHelpText>
    <label>Persist B2C AuthTokens</label>
    <type>Checkbox</type>
</CustomField>