src/sfdc/base/main/default/objects/B2C_CRM_Sync_AuthToken_Settings__mdt/listViews/Account_Manager_Configurations.listView-meta.xml
<ListView>
    <fullName>Account_Manager_Configurations</fullName>
    <columns>MasterLabel</columns>
    <columns>Account_Manager_Url__c</columns>
    <columns>Account_Manager_Port__c</columns>
    <columns>Account_Manager_Token_Url__c</columns>
    <columns>Expiration_in_Minutes__c</columns>
    <columns>JWT_Algorithm__c</columns>
    <filterScope>Everything</filterScope>
    <label>Account Manager Configurations</label>
</ListView>